# huffman_format

./: Cargo.toml  README.md
benchmarks/: Cargo.toml
benchmarks/analysis/: pyproject.toml
benchmarks/analysis/src/: run_analysis.py
benchmarks/benches/: compression_ratio.rs  performance.rs
benchmarks/src/: lib.rs
bitpack/: Cargo.toml
bitpack/src/: lib.rs  read.rs  test.rs  write.rs
bitpack/src/compact/: compact_numbers.rs  mod.rs
cli/: Cargo.toml
cli/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: check_data_integrity.rs  fuzz_huffman_unpack_file.rs
scripts/: release.sh
src/: lib.rs  table.rs  tree.rs
