[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0.35"
huffman_format = { path = ".." }
xz2 = "0.1.7"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["csv_output"] }
rand = "0.9.0"

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "compression_ratio"
harness = false
