[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
colog = "1.3.0"
derive_more = { version = "2.0.1", features = ["debug", "display"] }
env_logger = "0.11.6"
huffman_format = { version = "0.1.0", path = ".." }
log = "0.4.25"
once_cell = "1.20.3"
thiserror = "2.0.11"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dev-dependencies]
tempfile = "3.16.0"
